Remove justify-content center from showsneaker-ad-content. This fixes alignment of pics.

--- a/styles/show-sneaker.scss
+++ b/styles/show-sneaker.scss
@@ -24,7 +24,6 @@
 .showsneaker-ad-content {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .showsneaker-ad-desc {
